Added support of Description on SFX triggers, Database table changes have been done to allow this